// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renders text 1`] = `
<div>
  <span
    class="sc-bcXHqe gELUsL"
  >
    A simple text
  </span>
</div>
`;

exports[`<Text /> renders text with fontSize 1`] = `
<div>
  <span
    class="sc-bcXHqe bTiWZp"
  >
    A large text
  </span>
</div>
`;

exports[`<Text /> renders text with fontWeight 1`] = `
<div>
  <span
    class="sc-bcXHqe jOlIaU"
  >
    A bold text
  </span>
</div>
`;

exports[`<Text /> renders text with variant 1`] = `
<div>
  <span
    class="sc-bcXHqe gTZfXn"
  >
    A colored text
  </span>
</div>
`;
